# laptop_price_pridector_Mechine_Learning_project

./: app.py  df.pkl  laptop_price_pridector.ipynb  pyproject.toml
